--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,9 @@
 on:
-  workflow_run:
-    workflows: "Init repo"
-    types:
-      - completed
   push:
     branches: main
   pull_request:
     branches: main
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -26,8 +23,8 @@ jobs:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install R libraries in renv # add packages to the renv file if you need them to render the code
-        uses: r-lib/actions/setup-renv@v2
+      - name: Install R libraries in renv
+        uses: r-lib/actions/setup-r-dependencies@v2
 
       - name: Render quarto website
         run: quarto render
