--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install R libraries in renv
+      - name: Install R libraries
         uses: r-lib/actions/setup-r-dependencies@v2
 
       - name: Download synthetic datasets
