--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
             href: Presentations/allofus.qmd
           - text: "DrugUtilisation"
             href: Presentations/DrugUtilisation.qmd
+          - text: "Ecosystem"
+            href: Presentations/ecosystem.qmd
   page-footer:
     left: "© 2025 Tidy R with OMOP Workgroup"
     right:
